--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,11 +1,7 @@
-# Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
+<% SALT = "NaCl" unless defined?(SALT) %>
 
-one:
-  name: MyString
-  hashed_password: MyString
-  salt: MyString
+dave:
+  name: dave
+  hashed_password: <%= User.encrypted_password('secret', SALT) %>
+  salt: <%= SALT %>
 
-two:
-  name: MyString
-  hashed_password: MyString
-  salt: MyString
